Added a bunch of functionality; dashboard, login, logout, icons, new tasks.

--- a/static/whoseturn/css/dashboard.css
+++ b/static/whoseturn/css/dashboard.css
@@ -120,4 +120,32 @@ main {
   }
 }
 
-/*# sourceMappingURL=generic.css.map */
+.toolbar {
+  display: flex;
+  justify-content: center;
+  margin-top: 0.5em;
+  margin-bottom: 2em;
+}
+.toolbar a {
+  font-size: 2em;
+  color: red;
+  margin-left: 0.5em;
+  margin-right: 0.5em;
+}
+.toolbar a:hover {
+  text-shadow: 0 0 0.2em pink;
+}
+
+.check-task {
+  font-size: 1.5em;
+  text-align: center;
+}
+.check-task a, .check-task .material-icons {
+  font-weight: bold;
+  color: green;
+}
+.check-task a:hover {
+  text-shadow: 0 0 0.2em lightgreen;
+}
+
+/*# sourceMappingURL=dashboard.css.map */
