--- a/static/whoseturn/css/_base.scss
+++ b/static/whoseturn/css/_base.scss
@@ -23,15 +23,16 @@ $media-full-width: $max-page-width + 2 * $min-page-margin;
 }
 
 a {
-  color: darkgreen;
+  color: blue;
+  font-weight: bold;
   text-decoration: none;
 }
 
 a:hover {
-  text-shadow: 0 0 0.2em green;
+  text-shadow: 0 0 0.2em lightblue;
 }
 
-[type=text], [type=password], [type=email] {
+[type=text], [type=password], [type=email], select {
   @include reset-font;
   background-color: white;
   padding: 0.4em;
@@ -85,4 +86,9 @@ a:hover {
   color: darkred;
   margin-top: 1em;
   margin-bottom: 1em;
+}
+
+.material-icons {
+  vertical-align: bottom;
+  font-size: 1em;
 }
