--- a/templates/whoseturn/login.html
+++ b/templates/whoseturn/login.html
@@ -20,7 +20,7 @@
   <p class="form-header">Enter your credentials to log into Whose Turn Is It,
     or <a href="{% url 'wt-register' %}">register a new account</a>.</p>
 
-  <p class="centered-form-fields">
+  <p class="form-fields centered">
     {% render_field form.username placeholder="Username" %}
     {% render_field form.password placeholder="Password" %}
   </p>
