--- a/static/whoseturn/css/settings.css
+++ b/static/whoseturn/css/settings.css
@@ -161,28 +161,15 @@ main {
   text-shadow: 0 0 0.2em pink;
 }
 
-.check-task {
-  font-size: 3em;
-  text-align: center;
-}
-.check-task a {
+.form-section {
+  border-bottom: 1px solid gray;
   font-weight: bold;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+}
+
+.updated-info {
   color: green;
 }
-.check-task a:hover {
-  text-shadow: 0 0 0.2em lightgreen;
-}
 
-ul.turn-list {
-  list-style: none;
-  padding: 0;
-}
-ul.turn-list li {
-  margin-top: 2em;
-}
-ul.turn-list li .turn-name {
-  font-weight: bold;
-  font-size: 1.5em;
-}
-
-/*# sourceMappingURL=dashboard.css.map */
+/*# sourceMappingURL=settings.css.map */
