--- a/static/whoseturn/css/toolbar.css
+++ b/static/whoseturn/css/toolbar.css
@@ -1,3 +1,131 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+
+:root {
+  font-family: "Quicksand", sans-serif;
+  font-size: 16px;
+}
+@media screen and (min-width: 720px) {
+  :root {
+    font-size: 20px;
+  }
+}
+
+html {
+  background-color: white;
+}
+
+body {
+  color: black;
+}
+
+a {
+  color: blue;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+a:hover {
+  text-shadow: 0 0 0.2em lightblue;
+}
+
+[type=text], [type=password], [type=email], select {
+  font-family: "Quicksand", sans-serif;
+  font-size: 16px;
+  background-color: white;
+  padding: 0.4em;
+  border-radius: 0.4em;
+  border: 1px solid gray;
+}
+@media screen and (min-width: 720px) {
+  [type=text], [type=password], [type=email], select {
+    font-size: 20px;
+  }
+}
+
+[type=submit] {
+  font-family: "Quicksand", sans-serif;
+  font-size: 16px;
+  border-radius: 0.4em;
+  padding: 0.4em 1em 0.4em 1em;
+  border: none;
+  background-color: darkgreen;
+  color: white;
+}
+@media screen and (min-width: 720px) {
+  [type=submit] {
+    font-size: 20px;
+  }
+}
+
+.cancelbutton {
+  font-family: "Quicksand", sans-serif;
+  font-size: 16px;
+  border-radius: 0.4em;
+  padding: 0.4em 1em 0.4em 1em;
+  border: none;
+  background-color: darkred;
+  color: white;
+}
+@media screen and (min-width: 720px) {
+  .cancelbutton {
+    font-size: 20px;
+  }
+}
+
+.form-header {
+  font-size: 0.8em;
+  font-weight: bold;
+  margin-top: 1em;
+  margin-bottom: 0.3em;
+}
+
+.form-fields {
+  margin-left: 2em;
+  margin-right: 2em;
+}
+
+.centered {
+  text-align: center;
+}
+
+.form-submit {
+  text-align: right;
+  margin-top: 1em;
+}
+
+.generic-success {
+  font-size: 4em;
+  color: green;
+  text-align: center;
+}
+
+.title {
+  font-size: 2em;
+  font-weight: bold;
+  text-align: center;
+  color: black;
+}
+
+.subtitle {
+  text-align: center;
+  color: darkgray;
+  margin-bottom: 2em;
+}
+
+.errorlist {
+  color: darkred;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+.material-icons {
+  vertical-align: bottom;
+  font-size: 1em;
+}
+
 .toolbar {
   display: flex;
   justify-content: center;
