Added password change in settings view, password reset functionality, and the system returns a 404 response when users try to do things with tasks that they aren't members of.

--- a/templates/whoseturn/password_reset_start.html
+++ b/templates/whoseturn/password_reset_start.html
@@ -6,35 +6,28 @@
 <link rel="stylesheet" href="{% static 'whoseturn/css/generic.css' %}">
 {% endblock %}
 
-{% block title %}Whose Turn Is It : Login{% endblock %}
+{% block title %}Whose Turn Is It : Reset Password{% endblock %}
 
 {% block main %}
 <div class="title">Whose Turn Is It?</div>
-<div class="subtitle">Login</div>
+<div class="subtitle">Reset Password</div>
 
 <form method="post">
   {% csrf_token %}
 
   {{form.non_field_errors}}
 
-  <p class="form-header">Enter your credentials to log into Whose Turn Is It.</p>
+  <p class="form-header">Enter your username. An email will be sent to that user's email address
+    containing a password reset link.</p>
 
   <p class="form-fields centered">
     {% render_field form.username placeholder="Username" %}
-    {% render_field form.password placeholder="Password" %}
   </p>
-
   {{form.username.errors}}
-  {{form.password.errors}}
 
   <p class="form-submit centered">
-    <input type="submit" name="submit" value="Login">
+    <input type="submit" name="submit" value="Send Password Reset Email">
   </p>
+
 </form>
-
-<p class="form-header">Alternatively, you may
-  <a href="{% url 'wt-register' %}">register a new account</a> or
-  <a href="{% url 'wt-passwordresetstart' %}">reset your password</a>.</p>
-
-
 {% endblock %}
