Invites and password reset tokens now expire after a given number of days (defined in constants.py). Also added an error page for reporting when expiry has occurred, as well as for future errorness.

--- a/static/whoseturn/css/generic_success.css
+++ b/static/whoseturn/css/generic_success.css
@@ -96,12 +96,6 @@ a:hover {
   text-align: center;
 }
 
-.generic-success {
-  font-size: 4em;
-  color: green;
-  text-align: center;
-}
-
 .title {
   font-size: 2em;
   font-weight: bold;
@@ -145,10 +139,31 @@ main {
   }
 }
 
-.message {
+.material-icons.success {
+  font-size: 4em;
+  color: green;
+  text-align: center;
+}
+
+.material-icons.error {
+  font-size: 4em;
+  color: darkred;
+  text-align: center;
+}
+
+.message.success {
   color: green;
   text-align: center;
   font-weight: bold;
+  margin-top: 1em;
+}
+
+.message.error {
+  color: darkred;
+  text-align: center;
+  font-weight: bold;
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 
 /*# sourceMappingURL=generic_success.css.map */
