--- a/static/whoseturn/css/generic_success.scss
+++ b/static/whoseturn/css/generic_success.scss
@@ -1,7 +1,28 @@
 @use 'generic';
 
-.message {
+.material-icons.success {
+  font-size: 4em;
+  color: green;
+  text-align: center;
+}
+
+.material-icons.error {
+  font-size: 4em;
+  color: darkred;
+  text-align: center;
+}
+
+.message.success {
   color: green;
   text-align: center;
   font-weight: bold;
+  margin-top: 1em;
+}
+
+.message.error {
+  color: darkred;
+  text-align: center;
+  font-weight: bold;
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
