--- a/templates/whoseturn/entry_list.html
+++ b/templates/whoseturn/entry_list.html
@@ -38,7 +38,7 @@
         <div>
            <strong>{{entry.user.get_full_name}}</strong> on {{entry.date}}
         </div>
-        <div>{% if user == entry.user %}
+        <div style="white-space: nowrap;">{% if user == entry.user %}
           <a class="material-icons edit" href="{% url 'wt-logentryedit' entry_id=entry.id %}">edit</a>
           <a class="material-icons remove" href="{% url 'wt-logentrydelete' entry_id=entry.id %}">remove_circle_outline</a>
         {% endif %}</div>
