- Added add entry button to entrylist view. - Changed add entry view to send the user to entrylist afterward instead of dashboard. - Added copyright footer.

--- a/static/whoseturn/css/_base.scss
+++ b/static/whoseturn/css/_base.scss
@@ -43,6 +43,13 @@ body {
   color: black;
 }
 
+footer {
+  margin-top: 1em;
+  text-align: center;
+  color: gray;
+  font-size: 0.7em;
+}
+
 a {
   color: blue;
   font-weight: bold;
