--- a/templates/whoseturn/base.html
+++ b/templates/whoseturn/base.html
@@ -12,5 +12,8 @@
     <main>
       {% block main %}{% endblock %}
     </main>
+    <footer>
+      Copyright © 2020 Brandon Beamer
+    </footer>
   </body>
 </html>
