--- a/static/whoseturn/css/_base.scss
+++ b/static/whoseturn/css/_base.scss
@@ -98,6 +98,12 @@ a:hover {
   margin-right: 2em;
 }
 
+.captcha-container {
+  margin: 1em 0;
+  display: flex;
+  justify-content: center;
+}
+
 .form-submit {
   text-align: right;
   margin-top: 1em;
