- Fixed a bug where inputting a nonexistent username into the password reset page would yield an error 500. - Added a captcha to the password reset page. - Invite and reset tokens are expired before accepting/using them as well now; before they were expired when new ones were created. - Added information to reset and invite pages to safeport user about expiry times.

--- a/templates/whoseturn/password_reset_start.html
+++ b/templates/whoseturn/password_reset_start.html
@@ -18,12 +18,18 @@
   {{form.non_field_errors}}
 
   <p class="form-header">Enter your username. An email will be sent to that user's email address
-    containing a password reset link.</p>
+    containing a password reset link. Password reset links are valid for 
+    {{reset_lifespan}} day{% if reset_lifespan > 1 %}s{% endif %}.</p>
 
   <p class="form-fields centered">
     {% render_field form.username placeholder="Username" %}
   </p>
   {{form.username.errors}}
+
+  <div class="captcha-container">
+    {% render_field captcha_form.captcha %}
+    {{ captcha_form.captcha.errors }}
+  </div>
 
   <p class="form-submit centered">
     <input type="submit" name="submit" value="Send Password Reset Email">
