--- a/templates/whoseturn/task_new.html
+++ b/templates/whoseturn/task_new.html
@@ -28,8 +28,14 @@
 
   {{form.name.errors}}
 
-  <p class="form-header">Invite others to this task by entering their email addresses, separated by commas,
-    below.</p>
+  <div class="form-header">Invite others to this task by entering their email addresses, separated by commas,
+    below. 
+    <ul>
+      <li>
+        Invites are valid for {{invite_lifespan}} day{% if invite_lifespan > 1 %}s{% endif %}.
+      </li>
+    </ul>  
+  </div>
 
   <p class="form-fields">
     {% render_field form.invite_emails placeholder='lizzy@google.com, grandpa@hotmail.com, ...' style='width:100%' %}
