--- a/static/whoseturn/css/_base.scss
+++ b/static/whoseturn/css/_base.scss
@@ -91,6 +91,11 @@ a:hover {
   font-weight: bold;
   margin-top: 1em;
   margin-bottom: 0.3em;
+  // ul li {
+  //   margin: 0.2em 0;
+  //   font-size: 0.8em;
+  //   font-weight: bold;
+  // }
 }
 
 .form-fields {
