--- a/templates/whoseturn/password_reset_start.html
+++ b/templates/whoseturn/password_reset_start.html
@@ -17,9 +17,13 @@
 
   {{form.non_field_errors}}
 
+  <p style="font-size: 0.8em; color: gray;">Remember your password? <a href="{% url 'wt-login' %}">Login!</a></p>
+  
   <p class="form-header">Enter your username. An email will be sent to that user's email address
     containing a password reset link. Password reset links are valid for 
     {{reset_lifespan}} day{% if reset_lifespan > 1 %}s{% endif %}.</p>
+
+  
 
   <p class="form-fields centered">
     {% render_field form.username placeholder="Username" %}
