--- a/templates/whoseturn/settings.html
+++ b/templates/whoseturn/settings.html
@@ -43,10 +43,9 @@
 
   {{settings_form.non_field_errors}}
   <p class="form-section">Personal Details:</p>
-  <p class="form-header">Name:</p>
+  <p class="form-header">Nickname:</p>
   <p class="form-fields">
-    {% render_field details_form.first_name placeholder="First name" %}
-    {% render_field details_form.last_name placeholder="Last name" %}
+    {% render_field details_form.first_name placeholder="Nickname" %}
   </p>
   <p class="form-header">Email:</p>
   <p class="form-fields centered">
