- Added rate limited to critical views.

--- a/templates/whoseturn/generic_error.html
+++ b/templates/whoseturn/generic_error.html
@@ -21,6 +21,6 @@
 </div>
 {% endif %}
 
-<p class="centered">Back to <a href="{% url 'wt-login' %}">Login Page</a>.</p>
+<p class="centered"><a href="{% url 'wt-login' %}">Okay.</a></p>
 
 {% endblock %}
