- Changed date input from  "text" type to "date" type.

--- a/static/whoseturn/css/_base.scss
+++ b/static/whoseturn/css/_base.scss
@@ -60,7 +60,7 @@ a:hover {
   @include blue-glow;
 }
 
-[type=text], [type=password], [type=email], select {
+[type=text], [type=password], [type=email], [type=date], select {
   @include reset-font;
   background-color: white;
   padding: 0.4em;
