--- a/static/whoseturn/css/toolbar.css
+++ b/static/whoseturn/css/toolbar.css
@@ -38,7 +38,7 @@ a:hover {
   text-shadow: 0 0 0.2em lightblue;
 }
 
-[type=text], [type=password], [type=email], select {
+[type=text], [type=password], [type=email], [type=date], select {
   font-family: "Quicksand", sans-serif;
   font-size: 16px;
   background-color: white;
@@ -47,7 +47,7 @@ a:hover {
   border: 1px solid gray;
 }
 @media screen and (min-width: 720px) {
-  [type=text], [type=password], [type=email], select {
+  [type=text], [type=password], [type=email], [type=date], select {
     font-size: 20px;
   }
 }
